--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ font-size: 1.3rem;
       <p class="escrow-text2">Buyer and Seller Protection</p>
 	  <p class="escrow-text2">100% Guaranteed</p>
     </div>
-    <a href="https://escrow.com" target="_blank" rel="noopener" class="escrow-button" aria-label="Pay securely with Escrow.com">
+    <a href="https://www.escrow.com/checkout?token=0a10de26-ad2f-4af6-a977-ab016ff605be" target="_blank" rel="noopener" class="escrow-button" aria-label="Pay securely with Escrow.com">
       Secure Checkout
     </a>
   </div>
