--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     .subheading {
       font-size: 1.2rem;
       font-weight: 600;
-      margin: 0.5rem 0 2rem;
+      margin: 0.5rem 0 0.5rem;
     }
     .image-container {
       width: 100%;
@@ -135,6 +135,7 @@
   justify-content: center;     /* Center horizontally */
   align-items: center;         /* Center vertically */
 padding-top: 2rem;
+padding-bottom: 2rem;
   text-align: center;
 }
 
