--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="preload" as="image" href="stamp-logo.webp" type="image/webp">
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBWCMTBQ9L"></script>
@@ -589,7 +590,7 @@ font-size: 1.3rem;
       Clear, memorable domains tend to generate better engagement — supporting long-term organic visibility.</li>
 
       <li class="last-li"><strong>📈 Retains Resale Value</strong><br>
-      Unlike ad spend, VisaEdge is a digital asset — holding brand equity and resale potential for years to come.</li>
+      Unlike ad spend, VisaEdge.com is a digital asset — holding brand equity and resale potential for years to come.</li>
     </ul>
   </div>
 
